postgres-macros/tests/fail-nightly/scalar_mismatch.stderr
error[E0277]: the trait bound `String: Query<Literal<i64>>` is not satisfied
 --> tests/fail-nightly/scalar_mismatch.rs:5:56
  |
5 |     let _: String = sql!("SELECT COUNT(*) FROM users").await.unwrap();
  |                                                       -^^^^^ the trait `Query<Literal<i64>>` is not implemented for `String`
  |                                                       |
  |                                                       help: remove the `.await`
  |
  = help: the trait `Query<Literal<String>>` is implemented for `String`
  = note: required for `Sql<'_, Literal<i64>, String>` to implement `IntoFuture`
